fixed some alignments on searchbar to and from

--- a/js/client/src/sass/components/_mainMap.scss
+++ b/js/client/src/sass/components/_mainMap.scss
@@ -233,7 +233,6 @@
   }
 
   .mapboxgl-ctrl-geocoder {
-    width: 33.3333%;
     font-size: 15px;
     line-height: 20px;
     max-width: 360px;
